[gd_scene load_steps=7 format=2]

[ext_resource path="res://juego/interfaz/ContenedorVida.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/interfaz/ContenedorLlaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/interfaz/ContenedorMonedaBronce.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/interfaz/ContenedorMonedaDorada.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/interfaz/ContenedorMonedaPlata.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/interfaz/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContenedorVida" parent="." instance=ExtResource( 1 )]
margin_left = 25.8166
margin_top = 19.6431
margin_right = 147.817
margin_bottom = 69.6431

[node name="ContenedorLlaves" parent="." instance=ExtResource( 2 )]
margin_left = 25.8166
margin_top = 78.5724
margin_right = 147.817
margin_bottom = 128.572

[node name="ContenedorMonedaPlata" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.75
margin_top = 68.1126
margin_right = -27.7495
margin_bottom = 108.113

[node name="ContenedorMonedaBronce" parent="." instance=ExtResource( 3 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.75
margin_top = 116.044
margin_right = -27.7495
margin_bottom = 156.044

[node name="ContenedorMonedaDorada" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.75
margin_top = 20.1815
margin_right = -27.7495
margin_bottom = 60.1815
